
Improved ZX Vision:
- Added new Top Menu (not enabled by default)
- Reordered settings & new menu: check settings -> Emulated Display, General, Main Window, ZX Vision, TV
- Added shortcuts helper action to create icon to trigger recorded keys
- Some settings dialogs can reset value to defaults
- Restored maximized windows on startup, will be restored to the maximum size available
- New widget type Triangle on View Sensors

Improved ZX Desktop:
- Allow to set small values for ZX Desktop width size
- Add setting to disallow enabling ZX Desktop
- Allow to change background color for icons, lower and upper buttons
- Added setting to add a stroke on icons
- Windows are not closed when enabling ZX Desktop

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improved decimal precision of Basic Variables window values
Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix, Minix3
Improved ZENG Online protocol: allow to connect different client and server ZEsarUX versions (if they are compatible)
Improved inserting device files (mmc files, ide files, etc): now they are automatically enabled after inserting them

* Fixes:

Fixed emulation of Magnum Light Phaser
Fixed reading port BFFD on Spectrum +2A/+3
Fixed emulation of DD/FD+EB opcode: EX DE,HL instead of EX DE,IX/IY
Fixed timing of inexistent DD/FD opcodes
Fixed disassemble of undocumented opcodes dd/fd + cb + res/set (ix+d) where the result is also stored on a register
Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name
Fixed default timer on Mac OS X when not using cocoa driver
Fixed non-pthreads compilation
Fixed possible divide by 0 when getting bad cpu usage on Linux
Removed some old/non-existent - Z80N Next opcodes

----



ZEsarUX 12.1 - Night Shift edition. 25 September 2025

* New things added:
