@@ -54,6 +54,7 @@ Improved ZX Vision:
 - Added shortcuts helper action to create icon to trigger recorded keys
 - Some settings dialogs can reset value to defaults
 - Restored maximized windows on startup, will be restored to the maximum size available
+- Changed windows border color when dragging for resizing: Warning color when a window has to be enlarged (because there is text beyond current size), otherwise Selected color
 - New widget type Triangle on View Sensors
 
 Improved ZX Desktop:
